plugins {
  id("com.github.spotbugs") version "6.1.10"
}

apply plugin: 'jacoco'

task jacocoAggregateReport(type: JacocoReport) {
  group = 'verification'
  description = 'Generates an aggregate JaCoCo coverage report across all subprojects.'
  reports {
    html.required = true
    xml.required = true
    html.outputLocation = layout.buildDirectory.dir('reports/jacoco/aggregate')
    xml.outputLocation = layout.buildDirectory.file('reports/jacoco/aggregate/jacocoAggregateReport.xml')
  }
}

subprojects {
  plugins.withType(JacocoPlugin).configureEach {
    rootProject.jacocoAggregateReport.dependsOn(test)
    rootProject.jacocoAggregateReport.executionData(test)
    rootProject.jacocoAggregateReport.sourceDirectories.from(sourceSets.main.allSource.srcDirs)
    // Use jacocoTestReport.classDirectories so per-module exclusions are inherited
    rootProject.jacocoAggregateReport.classDirectories.from(jacocoTestReport.classDirectories)
  }
}

subprojects {
  apply plugin: 'checkstyle'
  apply plugin: 'com.github.spotbugs'

  tasks.withType(JavaCompile).configureEach {
    options.release = 11
    options.compilerArgs << '-Xlint:deprecation'
    options.compilerArgs << '-Xlint:unchecked'
  }
  tasks.withType(Javadoc).configureEach {
    options.addStringOption('Xdoclint:none', '-quiet')
  }

  spotbugs {
    ignoreFailures = false
    showProgress = true
    reportsDir = file("${rootDir}/build/spotbugs")
    includeFilter = file("$rootDir/config/spotbugs/include.xml")
    excludeFilter = file("$rootDir/config/spotbugs/exclude.xml")
  }

  plugins.withType(JavaPlugin) {
    project.apply plugin: 'jacoco'

    jacoco {
      toolVersion = "0.8.11"
    }

    dependencies {
      testImplementation libs.assertj
      testImplementation libs.junit.jupiter.api
      testImplementation libs.junit.jupiter.params
      testImplementation libs.junit.platform.launcher
      testImplementation libs.mockito.inline
      testImplementation libs.mockito.junit.jupiter
      testRuntimeOnly libs.junit.jupiter.engine
    }

    test {
      useJUnitPlatform {
        excludeTags 'integration'
      }
      testLogging {
        events "passed", "skipped", "failed"
      }
    }

    tasks.register('intTest', Test) {
      description = 'Runs integration tests.'
      group = 'verification'

      shouldRunAfter test

      useJUnitPlatform {
        includeTags 'integration'
      }

      testLogging {
        events "passed", "skipped", "failed"
      }
    }
  }
}
